<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".RegisterActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:id="@+id/textViewTitle"
        android:layout_alignParentTop="true"
        android:layout_marginTop="20dp"
        android:textSize="24dp"
        android:text="@string/main_title" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/register_title"
        android:id="@+id/textViewRegisterTitle"
        android:layout_marginTop="20dp"
        android:textSize="20dp"
        android:layout_below="@+id/textViewTitle"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/register_name"
        android:ems="10"
        android:id="@+id/editTextRegisterName"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/textViewRegisterTitle"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/register_surname"
        android:ems="10"
        android:id="@+id/editTextRegisterSurname"
        android:layout_below="@+id/editTextRegisterName"
        android:layout_alignLeft="@+id/editTextRegisterName"
        android:layout_alignStart="@+id/editTextRegisterName" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/editTextEmail"
        android:layout_below="@+id/editTextRegisterSurname"
        android:layout_alignLeft="@+id/editTextRegisterSurname"
        android:layout_alignStart="@+id/editTextRegisterSurname"
        android:text="@string/register_email" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/register_nif_nie"
        android:ems="10"
        android:id="@+id/editTextNifNie"
        android:layout_below="@+id/editTextEmail"
        android:layout_alignLeft="@+id/editTextEmail"
        android:layout_alignStart="@+id/editTextEmail" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_diability"
        android:id="@+id/checkBoxDisability"
        android:layout_below="@+id/editTextNifNie"
        android:layout_alignLeft="@+id/editTextNifNie"
        android:layout_alignStart="@+id/editTextNifNie"
        android:checked="false"
        android:layout_marginTop="10dp"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/editTextDisabilityGrade"
        android:layout_alignBottom="@+id/checkBoxDisability"
        android:layout_toRightOf="@+id/checkBoxDisability"
        android:layout_alignEnd="@id/editTextNifNie"
        android:text="@string/register_disability_grade"
        android:paddingLeft="5dp"
        android:textSize="15dp"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:id="@+id/editTextTelephone"
        android:layout_below="@+id/checkBoxDisability"
        android:layout_alignLeft="@+id/checkBoxDisability"
        android:layout_alignStart="@+id/checkBoxDisability"
        android:text="@string/register_telephone" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:id="@+id/editTextBirthDay"
        android:layout_below="@+id/editTextTelephone"
        android:layout_alignLeft="@+id/editTextTelephone"
        android:layout_alignStart="@+id/editTextTelephone"
        android:text="@string/register_birthday" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_send"
        android:id="@+id/buttonRegisterSend"
        android:layout_below="@+id/editTextBirthDay"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp" />

</RelativeLayout>
